--- a/wonder/romeo/static/scss/specifics/video/_video-view.scss
+++ b/wonder/romeo/static/scss/specifics/video/_video-view.scss
@@ -49,6 +49,7 @@
 }
 
 .video-view__container {
+  margin-bottom: $base-spacing-unit;
   @extend %ratio;
   @extend %ratio--16x9;
 }
